# xcash

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API.md  CONTRIBUTING.md  Caddyfile  Makefile  README.md  conftest.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
compose/dev/bitcoin/: bitcoin.conf
compose/production/bitcoin/: bitcoin.conf
compose/production/django/: Dockerfile  start
config/: celery.py  performance.py  urls.py
config/settings/: base.py  dev.py  production.py  test.py  unfold.py
locale/en/LC_MESSAGES/: django.po
pay-fronted/: .npmrc  package.json  pnpm-lock.yaml
pay-fronted/src/components/: PaymentAddress.jsx  PaymentProgress.jsx  PaymentStepper.jsx  StepCompleted.jsx  StepIndicator.jsx  SummaryBar.jsx
pay-fronted/src/hooks/: useI18n.js
pay-fronted/src/locales/: en.json  zh.json
scripts/: dev-beat.sh  dev-bootstrap.sh  dev-manage.sh  dev-signer-e2e.sh  dev-signer-manage.sh  dev-up.sh  dev-web.sh  dev-worker-scan.sh  dev-worker-stress.sh  dev-worker.sh  init_env.sh  worker.js
signer/: pyproject.toml
signer/compose/production/: Dockerfile  start
signer/config/: settings.py
signer/wallets/: crypto.py  error_codes.py  models.py  tests.py  views.py
xcash/alerts/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
xcash/bitcoin/: constants.py  network.py  rpc.py  tests.py  utils.py  watch_sync.py
xcash/bitcoin/migrations/: 0001_initial.py  0002_initial.py
xcash/bitcoin/scanner/: receipt.py  watchers.py
xcash/chains/: adapters.py  admin.py  capabilities.py  models.py  service.py  tasks.py  test_signer.py  tests.py
xcash/chains/migrations/: 0001_initial.py  0002_initial.py  0003_alter_address_chain_type_alter_chain_type.py  0003_broadcast_task_tx_hash_nullable.py  0007_remove_chain_open_native_scanner.py  0008_alter_onchaintransfer_confirm_mode.py
xcash/common/: admin_scan_cursor.py  consts.py  error_codes.py  fields.py  internal_callback.py  logger.py  middlewares.py  pagination.py  permission_check.py  tests.py
xcash/common/tests/: test_address_validation.py  test_host_access.py  test_internal_callback.py  test_logging.py  test_permission_check.py  test_trusted_proxy.py
xcash/common/utils/: bitcoin.py
xcash/core/: admin.py  dashboard.py  dashboard_metrics.py  default_data.py  models.py  runtime_settings.py  test_bootstrap_reference_data.py  tests.py  tests_monitoring.py  tests_performance_profile.py
xcash/core/migrations/: 0001_initial.py  0002_initial.py  0003_platformsettings_open_native_scanner.py  0004_platformsettings_quicknode_misttrack_endpoint_url_and_more.py  0005_rename_risk_marking_threshold.py  0006_platformsettings_misttrack_openapi_api_key.py
xcash/currencies/: admin.py  models.py  service.py  tests.py
xcash/currencies/migrations/: 0001_initial.py
xcash/deposits/: admin.py  models.py  service.py  tasks.py  tests.py  viewsets.py
xcash/deposits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_depositaddress_chain_type.py  0003_depositcollection_broadcast_task.py  0004_collect_schedule_and_drop_failed_attempts.py  0004_deposit_transfer_non_nullable_cascade.py  0005_add_gas_recharge.py  0005_deposit_risk_level_deposit_risk_score.py
xcash/evm/: adapter.py  admin.py  constants.py  coordinator.py  models.py  tasks.py  tests.py
xcash/evm/migrations/: 0001_initial.py  0002_alter_evmscancursor_last_error.py  0002_evmbroadcasttask_gas_price_nullable.py
xcash/evm/scanner/: erc20.py  native.py  rpc.py  service.py  watchers.py
xcash/evm/tests/: test_adapter.py  test_broadcast_task.py  test_chain_scanner_service.py  test_coordinator.py  test_erc20_scanner.py  test_internal_confirmation.py  test_native_scanner.py  test_nonce_concurrency.py  test_reconcile.py  test_rpc.py  test_scanner_defaults.py  test_task_queue.py
xcash/internal_api/: authentication.py  urls.py
xcash/internal_api/serializers/: currencies.py  deposits.py  epay.py  invoices.py  operations.py  projects.py  recipient_addresses.py  webhooks.py
xcash/internal_api/tests/: test_authentication.py  test_epay_merchant.py  test_invoices.py  test_pagination.py  test_project_update.py  test_routing.py  test_stats.py
xcash/internal_api/viewsets/: currencies.py  deposits.py  epay.py  invoices.py  operations.py  projects.py  recipient_addresses.py  stats.py  webhooks.py  withdrawals.py
xcash/invoices/: admin.py  epay.py  epay_serializers.py  epay_service.py  epay_views.py  forms.py  models.py  serializers.py  service.py  tests.py  tests_epay.py  views.py  viewsets.py
xcash/invoices/migrations/: 0001_initial.py  0002_epay_v1.py  0002_initial.py  0003_remove_invoice_generated_by.py  0004_remove_epayorder_notified_at_epayorder_notify_event.py  0005_alter_epaymerchant_default_currency_and_more.py  0006_rename_invoice_redirect_url_return_url.py  0007_remove_epaymerchant_default_currency.py  0008_backfill_epay_merchant.py  0009_invoice_notify_url.py  0010_remove_invoice_email.py  0011_invoice_risk_level_invoice_risk_score.py
xcash/projects/: admin.py  models.py  service.py  signals.py  tests.py
xcash/projects/migrations/: 0001_initial.py  0002_gather_period_minutes.py  0002_initial.py  0003_alter_historicalrecipientaddress_chain_type_and_more.py  0004_allow_blank_webhook.py  0005_remove_simple_history_tables.py  0006_alter_project_ip_white_list.py
xcash/risk/: __init__.py  admin.py  apps.py  clients.py  misttrack_coin_map.py  models.py  service.py  tasks.py  tests.py
xcash/stress/: admin.py  apps.py  bitcoin.py  evm.py  models.py  payment.py  service.py  tasks.py  test_queue_isolation.py  tests.py  urls.py  views.py
xcash/tron/: __init__.py  adapter.py  admin.py  apps.py  client.py  codec.py  models.py  scanner.py  signals.py  tasks.py  tests.py  watchers.py
xcash/users/: admin.py  middleware.py  otp.py  tests.py  urls.py  views.py
xcash/webhooks/: admin.py  models.py  service.py  tasks.py  tests.py
xcash/withdrawals/: admin.py  models.py  serializers.py  service.py  tests.py  viewsets.py
(+13 files in other folders)
